[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/objects/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PushZone" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushZone"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PushZone" to="." method="_on_PushZone_body_entered"]
[connection signal="body_exited" from="PushZone" to="." method="_on_PushZone_body_exited"]
